[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
axum = { version = "0.6.0" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }